--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -59,6 +59,7 @@
     "react-dnd": "15.1.2",
     "react-dnd-html5-backend": "15.1.3",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha-v3": "^1.9.8",
     "react-hot-toast": "^2.2.0",
     "react-leaflet": "^3.2.5",
     "react-select": "^5.3.2",
