--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -38,6 +38,8 @@
     "@snailycad/schemas": "1.15.3",
     "@snailycad/types": "1.15.3",
     "@snailycad/utils": "1.15.3",
+    "@tanstack/react-virtual": "^3.0.0-alpha.0",
+    "@tanstack/virtual-core": "^3.0.0-alpha.1",
     "axios": "^0.27.2",
     "bignumber.js": "^9.0.2",
     "date-fns": "^2.28.0",
