--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -63,6 +63,7 @@
     "discord-api-types": "0.36.1",
     "express": "4.18.1",
     "glob": "^8.0.3",
+    "image-data-uri": "^2.0.1",
     "jsonwebtoken": "8.5.1",
     "nanoid": "^3.3.4",
     "nodemon": "^2.0.19",
