--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -23,10 +23,12 @@
     "@types/express": "^4.17.13",
     "@types/glob": "^7.2.0",
     "@types/jsonwebtoken": "8.5.8",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.0.6",
     "@types/qrcode": "^1.4.2",
     "esbuild": "^0.14.49",
     "esbuild-register": "^3.3.3",
+    "multer": "^1.4.5-lts.1",
     "regenerator-runtime": "^0.13.9",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.0.0",
