--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,8 @@
     "@typescript-eslint/no-non-null-asserted-nullish-coalescing": "error",
     "@typescript-eslint/no-unnecessary-condition": "error",
     "@typescript-eslint/no-unnecessary-boolean-literal-compare": "error",
-    "@typescript-eslint/no-redundant-type-constituents": "off"
+    "@typescript-eslint/no-redundant-type-constituents": "off",
+    "@next/next/no-server-import-in-page": "off"
   },
   "overrides": [
     {
