--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ packages/api/public/**/*.svg
 packages/api/public/**/*.jpg
 packages/api/public/**/*.jpeg
 packages/api/public/**/*.gif
+packages/api/public/**/*.webp
 
 .eslintcache
 
