--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -26,6 +26,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^18.6.2",
     "@types/qrcode": "^1.4.2",
+    "@types/sharp": "^0.30.5",
     "esbuild": "^0.14.51",
     "esbuild-register": "^3.3.3",
     "multer": "^1.4.5-lts.1",
@@ -63,6 +64,7 @@
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "cuid": "^2.1.8",
+    "cwebp": "^2.0.5",
     "discord-api-types": "0.37.0",
     "express": "4.18.1",
     "glob": "^8.0.3",
@@ -72,6 +74,7 @@
     "otplib": "^12.0.1",
     "prisma": "^4.1.1",
     "qrcode": "^1.5.1",
+    "sharp": "^0.30.7",
     "socket.io": "^4.5.1",
     "undici": "^5.8.0"
   }
