--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -26,6 +26,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^18.6.2",
     "@types/qrcode": "^1.4.2",
+    "@types/sharp": "^0.30.5",
     "esbuild": "^0.14.51",
     "esbuild-register": "^3.3.3",
     "multer": "^1.4.5-lts.1",
@@ -72,6 +73,7 @@
     "otplib": "^12.0.1",
     "prisma": "^4.1.1",
     "qrcode": "^1.5.1",
+    "sharp": "^0.30.7",
     "socket.io": "^4.5.1",
     "undici": "^5.8.0"
   }
