--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,6 +20,7 @@
     "@casper124578/use-socket.io": "4.1.2",
     "@casper124578/useful": "^2.0.3",
     "@headlessui/react": "^1.6.6",
+    "@next/bundle-analyzer": "^12.2.5",
     "@radix-ui/react-accordion": "^1.0.0",
     "@radix-ui/react-context-menu": "^1.0.0",
     "@radix-ui/react-dropdown-menu": "^1.0.0",
@@ -32,6 +33,7 @@
     "@react-aria/interactions": "^3.10.0",
     "@react-aria/label": "^3.4.0",
     "@react-aria/ssr": "^3.3.0",
+    "@sentry/nextjs": "^7.11.1",
     "@sentry/react": "^7.11.1",
     "@sentry/tracing": "^7.11.1",
     "@snailycad/config": "1.22.0",
