--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "start": "yarn run concurrently \"yarn workspace @snailycad/client start\" \"yarn workspace @snailycad/api generate && yarn workspace @snailycad/api start\"",
     "dev": "yarn turbo run watch --parallel",
-    "format:quick": "pretty-quick --staged --pattern \"(packages|apps)/**/*.{js,jsx,ts,tsx,md,css,json}\"",
-    "format": "prettier --write \"./(packages|apps)/**/**/*.{js,jsx,ts,tsx,md,css,json}\" --ignore-path .gitignore",
+    "format:quick": "pretty-quick --staged --pattern \"(packages|apps)/**/*.{js,jsx,mjs,ts,tsx,md,css,json}\"",
+    "format": "prettier --write \"./(packages|apps)/**/**/*.{js,jsx,ts,mjs,tsx,md,css,json}\" --ignore-path .gitignore",
     "lint": "yarn run eslint . --ext .ts,.js,.tsx,.jsx,.mjs",
     "lint:fix": "yarn run eslint . --ext .ts,.js,.tsx,.jsx,.mjs --fix",
     "prepare": "husky install",
