--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -42,7 +42,7 @@
     "@tailwindcss/typography": "^0.5.8",
     "@tanstack/match-sorter-utils": "^8.7.2",
     "@tanstack/react-query": "^4.20.4",
-    "@tanstack/react-table": "^8.7.4",
+    "@tanstack/react-table": "8.7.0",
     "@tanstack/react-virtual": "^3.0.0-alpha.0",
     "@tanstack/virtual-core": "^3.0.0-alpha.1",
     "axios": "^1.2.1",
