--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -64,6 +64,7 @@
     "react-colorful": "^5.6.1",
     "react-cool-onclickoutside": "^1.7.0",
     "react-cropper": "^2.1.8",
+    "react-diff-viewer-continued": "^3.2.4",
     "react-digit-input": "^2.1.0",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
