--- a/packages/audit-logger/package.json
+++ b/packages/audit-logger/package.json
@@ -21,9 +21,7 @@
   "scripts": {
     "build": "yarn tsup",
     "watch": "yarn tsup --watch --silent=false",
-    "typecheck": "yarn tsc --noEmit",
-    "test:watch": "yarn vitest --watch",
-    "test": "yarn vitest run"
+    "typecheck": "yarn tsc --noEmit"
   },
   "devDependencies": {
     "tsup": "^6.5.0",
