--- a/packages/audit-logger/package.json
+++ b/packages/audit-logger/package.json
@@ -19,11 +19,12 @@
     "dist"
   ],
   "scripts": {
-    "build": "yarn workspace @snailycad/api generate && yarn tsup",
+    "build": "npx rimraf ./dist && yarn workspace @snailycad/api generate && yarn tsup",
     "watch": "yarn tsup --watch --silent=false",
     "typecheck": "yarn tsc --noEmit"
   },
   "devDependencies": {
+    "@snailycad/types": "1.43.0",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
