--- a/packages/audit-logger/tsconfig.json
+++ b/packages/audit-logger/tsconfig.json
@@ -7,5 +7,6 @@
     "moduleResolution": "node",
     "declaration": true,
     "resolveJsonModule": true
-  }
+  },
+  "exclude": ["dist", "node_modules"]
 }
