--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -59,6 +59,7 @@
     "next": "13.0.6",
     "next-intl": "2.10.2",
     "nookies": "^2.5.2",
+    "nprogress": "^0.2.0",
     "pretty-bytes": "^6.0.0",
     "react": "18.2.0",
     "react-bootstrap-icons": "^1.10.2",
@@ -94,6 +95,7 @@
   "devDependencies": {
     "@types/color": "^3.0.3",
     "@types/leaflet": "^1.9.0",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/sortablejs": "^1.15.0",
