--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "watch": "docker compose up",
     "dev": "yarn  prisma generate && yarn nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec yarn ts-node -r tsconfig-paths/register src/main.ts",
+    "build": "yarn prisma generate && yarn tsc",
     "start": "yarn prisma migrate deploy && yarn prisma generate && yarn ts-node -r tsconfig-paths/register src/main.ts",
     "format": "yarn prisma format",
     "generate": "yarn prisma generate",
