--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@snailycad/client",
   "version": "1.44.1",
+  "sideEffects": false,
   "scripts": {
     "dev": " yarn next dev",
     "watch": "npm run dev",
